--- a/trunk/PresentationLayer/AdminPresentationLayer.csproj
+++ b/trunk/PresentationLayer/AdminPresentationLayer.csproj
@@ -99,6 +99,12 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="QuestionEditor\AnswerItem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QuestionEditor\AnswerItem.Designer.cs">
+      <DependentUpon>AnswerItem.cs</DependentUpon>
+    </Compile>
     <Compile Include="QuestionEditor\FillInBlankEditor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +117,7 @@
     <Compile Include="QuestionEditor\MultipleChoiceEditor.Designer.cs">
       <DependentUpon>MultipleChoiceEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="QuestionEditor\NodeAnswerItem.cs" />
     <Compile Include="QuestionEditor\QuestionListItemCustom.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -168,6 +175,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="QuestionEditor\AnswerItem.resx">
+      <DependentUpon>AnswerItem.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="QuestionEditor\QuestionListItemCustom.resx">
       <DependentUpon>QuestionListItemCustom.cs</DependentUpon>
     </EmbeddedResource>
@@ -191,6 +201,10 @@
     <Content Include="Resources\Welcome.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BusinessEntities\BusinessEntities.csproj">
+      <Project>{EAE0FA35-5202-4F99-915D-B48FE68976D8}</Project>
+      <Name>BusinessEntities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Commons\Commons.csproj">
       <Project>{87456E8E-2CB5-43D4-943E-FCB03CF2CA13}</Project>
       <Name>Commons</Name>
