--- a/trunk/Commons/Commons.csproj
+++ b/trunk/Commons/Commons.csproj
@@ -53,6 +53,7 @@
     <Compile Include="CommonGui\InputDialog.Designer.cs">
       <DependentUpon>InputDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="ConstantGUI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CommonGui\InputDialog.resx">
