--- a/PresentationLayer/AdminPresentationLayer.csproj
+++ b/PresentationLayer/AdminPresentationLayer.csproj
@@ -115,10 +115,16 @@
     <Compile Include="QuestionEditor\FillInBlankEditor.Designer.cs">
       <DependentUpon>FillInBlankEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="QuestionEditor\Item.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QuestionEditor\Item.Designer.cs">
+      <DependentUpon>Item.cs</DependentUpon>
+    </Compile>
     <Compile Include="QuestionEditor\Items.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="QuestionEditor\Items.Designer.cs">
+    <Compile Include="QuestionEditor\Items.designer.cs">
       <DependentUpon>Items.cs</DependentUpon>
     </Compile>
     <Compile Include="QuestionEditor\MultipleChoiceEditor.cs">
@@ -193,6 +199,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="QuestionEditor\AnswerItem.resx">
       <DependentUpon>AnswerItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuestionEditor\Item.resx">
+      <DependentUpon>Item.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="QuestionEditor\Items.resx">
       <DependentUpon>Items.cs</DependentUpon>
