--- a/trunk/PresentationLayer/AdminPresentationLayer.csproj
+++ b/trunk/PresentationLayer/AdminPresentationLayer.csproj
@@ -221,8 +221,11 @@
     <Content Include="Lib\Ribbon.dll" />
     <None Include="app.config" />
     <Content Include="Resources\AddNew.png" />
+    <None Include="Resources\Clock.png" />
     <Content Include="Resources\NewQuestion.png" />
     <Content Include="Resources\Program.png" />
+    <None Include="Resources\test.png" />
+    <None Include="Resources\Results.png" />
     <Content Include="Resources\Welcome.jpg" />
   </ItemGroup>
   <ItemGroup>
