--- a/PresentationLayer/AdminPresentationLayer.csproj
+++ b/PresentationLayer/AdminPresentationLayer.csproj
@@ -71,6 +71,12 @@
     <Compile Include="Category\CategoryExplorer.Designer.cs">
       <DependentUpon>CategoryExplorer.cs</DependentUpon>
     </Compile>
+    <Compile Include="ExamEditor\NewExam.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ExamEditor\NewExam.Designer.cs">
+      <DependentUpon>NewExam.cs</DependentUpon>
+    </Compile>
     <Compile Include="Explorer\ExplorerPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -174,6 +180,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ExamEditor\NewExam.resx">
+      <DependentUpon>NewExam.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Explorer\ExplorerPanel.resx">
       <DependentUpon>ExplorerPanel.cs</DependentUpon>
     </EmbeddedResource>
