--- a/trunk/ClientPresentationLayer/ClientPresentationLayer.csproj
+++ b/trunk/ClientPresentationLayer/ClientPresentationLayer.csproj
@@ -54,22 +54,46 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Main Form.cs">
+    <Compile Include="Common\DataItemCollection.cs" />
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main Form.Designer.cs">
-      <DependentUpon>Main Form.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainFormView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainFormView.Designer.cs">
+      <DependentUpon>MainFormView.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionPresentation\Data\TestDataListViewItem.cs" />
+    <Compile Include="QuestionPresentation\Data\TestDataListViewItemController.cs" />
     <Compile Include="QuestionPresentation\QuestionPresentPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="QuestionPresentation\QuestionPresentPanel.Designer.cs">
       <DependentUpon>QuestionPresentPanel.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Main Form.resx">
-      <DependentUpon>Main Form.cs</DependentUpon>
+    <Compile Include="QuestionPresentation\QuestionReviewPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QuestionPresentation\QuestionReviewPanel.Designer.cs">
+      <DependentUpon>QuestionReviewPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuestionPresentation\TestManager.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QuestionPresentation\TestManager.Designer.cs">
+      <DependentUpon>TestManager.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainFormView.resx">
+      <DependentUpon>MainFormView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -83,6 +107,12 @@
     </Compile>
     <EmbeddedResource Include="QuestionPresentation\QuestionPresentPanel.resx">
       <DependentUpon>QuestionPresentPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuestionPresentation\QuestionReviewPanel.resx">
+      <DependentUpon>QuestionReviewPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuestionPresentation\TestManager.resx">
+      <DependentUpon>TestManager.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
@@ -105,6 +135,17 @@
     <None Include="Resources\NewQuestion.png" />
     <None Include="Resources\AddNew.png" />
     <None Include="Resources\test.png" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Commons\Commons.csproj">
+      <Project>{87456E8E-2CB5-43D4-943E-FCB03CF2CA13}</Project>
+      <Name>Commons</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SingleInstanceObject\SingleInstanceObject.csproj">
+      <Project>{45701DE8-D225-4300-9657-286C1B98166D}</Project>
+      <Name>SingleInstanceObject</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
