--- a/trunk/PresentationLayer/AdminPresentationLayer.csproj
+++ b/trunk/PresentationLayer/AdminPresentationLayer.csproj
@@ -252,6 +252,10 @@
       <Project>{45701DE8-D225-4300-9657-286C1B98166D}</Project>
       <Name>SingleInstanceObject</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TestApplication\BusinessLogicLayer.csproj">
+      <Project>{38ED14A1-21E8-4CC7-84AF-18D8AC47D2F6}</Project>
+      <Name>BusinessLogicLayer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WeiFenLuoDockingMaster\WinFormsUI\WeifenLuo.WinFormsUI.Docking.csproj">
       <Project>{C75532C4-765B-418E-B09B-46D36B2ABDB1}</Project>
       <Name>WeifenLuo.WinFormsUI.Docking</Name>
