--- a/trunk/Commons/Commons.csproj
+++ b/trunk/Commons/Commons.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ITranslateBE.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingManager.cs" />
     <EmbeddedResource Include="CommonGui\InputDialog.resx">
       <DependentUpon>InputDialog.cs</DependentUpon>
     </EmbeddedResource>
