--- a/trunk/DataAccessLayer/DataAccessLayer.csproj
+++ b/trunk/DataAccessLayer/DataAccessLayer.csproj
@@ -79,7 +79,7 @@
   <ItemGroup>
     <Compile Include="AnswerDAL.cs" />
     <Compile Include="QuestionDAL.cs" />
-    <Compile Include="ActionXML.cs" />
+    <Compile Include="XmlHelper.cs" />
     <Compile Include="TestDAL.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -95,6 +95,10 @@
     <ProjectReference Include="..\Commons\Commons.csproj">
       <Project>{87456E8E-2CB5-43D4-943E-FCB03CF2CA13}</Project>
       <Name>Commons</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SingleInstanceObject\SingleInstanceObject.csproj">
+      <Project>{45701DE8-D225-4300-9657-286C1B98166D}</Project>
+      <Name>SingleInstanceObject</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
